Bug 1387340 - Ensure popup windows spawned on non-primary windows get a correct scale. r=jfkthame a=jcristau