widget/windows/nsWindow.cpp
@@ -847,6 +847,7 @@ nsWindow::Create(nsIWidget* aParent,
     NS_WARNING("nsWindow CreateWindowEx failed.");
     return NS_ERROR_FAILURE;
   }
+  mDefaultScale = -1.0;
 
   if (mIsRTL) {
     DWORD dwAttribute = TRUE;    
